Reapply "Reapply "Merge branch 'development' into feat-functional-and-unit-tests""
This reverts commit c44c9f64f0bc0aa3184f45d36452a687ad889510.